packages/jsii/test/negatives/_unexported.ts
/**
 * This should never be exported by the modules that import it.
 */
export interface UnexportedProps {
  readonly name: string;
}
